# dynamicSo

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/modi/dynamic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib-A.cpp  native-lib-B.cpp  native-lib.cpp  nativeso1.cpp
app/src/main/java/com/modi/dynamic/: App.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/modi/dynamic/: ExampleUnitTest.kt
dySolib/: build.gradle.kts
dySolib/src/androidTest/java/com/modi/dysolib/: ExampleInstrumentedTest.kt
dySolib/src/main/java/com/modi/dysolib/: DynamicSoCore.kt  DynamicSoHelp.kt  LoadLibraryUtils.kt  ReflectUtil.kt
dySolib/src/main/java/com/modi/dysolib/elf/: Dynamic32Structure.java  Dynamic64Structure.java  Elf.java  Elf32Header.java  Elf64Header.java  ElfParser.java  Program32Header.java  Program64Header.java  Section32Header.java  Section64Header.java
dySolib/src/main/java/com/modi/dysolib/utils/: AbiUtils.kt
dySolib/src/test/java/com/modi/dysolib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
